app/routes/divaOutput/divaOutputView.css
.diva-output-view-page {
  display: grid;
}

.record-status-bar {
  margin-block: var(--gap-l);
}

.diva-output-view {
  justify-items: start;
  gap: var(--gap-xxl);
  font-variant-numeric: tabular-nums;
  max-width: 2000px;
  padding-bottom: var(--gap-xl);

  @media (width < 1200px) {
    display: flex;
    flex-direction: column;
    gap: 0;
  }
}

.info-alert {
  margin-bottom: var(--gap);
}

p,
dd {
  max-width: 100ch;
}

h1 {
  max-width: 60ch;
  font-size: 2rem;
  line-height: 1.2;

  @media (width < 800px) {
    font-size: 1.5rem;
  }
}

h2 {
  margin-top: var(--gap-l);
  margin-bottom: var(--gap-s);
  font-size: 1.3rem;
}

h3 {
  margin-top: var(--gap);
}

article {
  display: grid;
  gap: var(--gap);
  padding-bottom: var(--gap-l);
}

aside {
  @media (width >= 1200px) {
    border-left: 1px solid var(--color-thin-border);
    padding-left: var(--gap-xxl);
  }
}

dt {
  color: var(--color-label);
  margin-top: var(--gap-l);
}

dd {
  padding-left: var(--gap);
}

dd + dd {
  &:not(:has(> button))::before {
    content: ', ';
  }
}

dd:has(+ dd),
dd + dd {
  display: inline;
}

dd.block {
  display: block;
  margin-bottom: var(--gap-s);
  padding-left: var(--gap);

  &::before {
    display: none;
  }
}

dd.inline {
  display: inline;
}

dl.inline-definitions {
  dt {
    display: inline;
    margin-top: 0;

    /* Force a line break before each dt */
    &::before {
      content: '';
      display: block;
      margin-top: var(--gap-s);
    }

    &:first-child::before {
      margin-top: 0;
    }

    &::after {
      content: ':';
    }
  }

  dd {
    display: inline;
  }
}

dl.compact {
  dt {
    margin-top: var(--gap);
  }
}

section {
  dt:first-child {
    margin-top: 0;
  }
}

section section {
  border: none;
  padding: 0;
  margin: 0;
}

section:last-of-type {
  border-bottom: none;
  padding-bottom: 0;
}

.pill-container {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
  list-style: none;
}

.pill {
  display: inline-block;
  padding: var(--gap-s) var(--gap-l);
  background: var(--color-card);
  border: 1px solid var(--color-link);
  color: var(--color-text);
  border-radius: var(--border-radius);
}

.sdg-image {
  height: 6rem;
  width: auto;
}

address {
  font-style: normal;
  display: inline;
}

.expanded-card {
  border: 1px solid var(--color-output-card-border);
  background: var(--color-output-card-background);
  border-radius: var(--border-radius-s);
  padding: var(--gap);
  margin-bottom: var(--gap-s);

  .name {
    font-weight: bold;
  }

  dt:not(:first-child) {
    margin-top: var(--gap-s);
  }

  .inline-definitions {
    row-gap: 0;

    dt {
      margin-top: 0;
    }
  }
}

.affiliation {
  margin-top: var(--gap);
}

.attachments {
  ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    width: max-content;
    max-width: 100%;
  }
}

.presentation-image {
  width: 250px;
  margin-bottom: var(--gap-l);
  border: 1px solid var(--color-output-card-border);
  border-radius: var(--border-radius-s);
}

.attachment {
  margin-bottom: var(--gap-l);
  display: flex;
  align-items: flex-start;
  gap: var(--gap-l);

  > :last-child {
    margin-left: auto;
  }
}

.attachment-heading {
  font-size: var(--font-size-h4);
  margin-top: 0;
}

.attachment-thumbnail {
  width: 60px;
  margin-bottom: var(--gap-s);
  border: 1px solid var(--color-output-card-border);
  border-radius: var(--border-radius-s);
}

.record-details {
  background: var(--color-output-card-background);
  padding: var(--gap);
  border-radius: var(--border-radius-s);
  border: 1px solid var(--color-output-card-border);
  margin-block: var(--gap-xl);

  summary {
    cursor: pointer;
    outline: none;
    display: flex;
    align-items: center;
    gap: var(--gap-s);

    &:hover {
      background-color: var(--color-secondary-hover);
    }
  }

  h2 {
    font-size: 1rem;
    margin: 0;
    padding: 0;
  }

  &[open] {
    summary {
      padding-bottom: var(--gap);

      .expand-chevron {
        transform: rotate(180deg);
      }
    }
  }
}

.attachment .record-details {
  padding: var(--gap-s);
  font-size: var(--font-size-s);
  transition:
    background-color 0.1s,
    border-color 0.1s;
  margin-bottom: var(--gap);

  &:not([open]) {
    background-color: transparent;
  }

  &:hover {
    border-color: var(--color-thin-border);
  }

  h2 {
    font-size: var(--font-size-s);
  }

  dl {
    padding-right: var(--gap);
  }

  dt {
    margin-top: var(--gap);
  }
}

